# HM_Digital

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  deploy.sh  docker-compose.dev.yml  docker-compose.yml  scrape_contacts.py
.github/workflows/: deploy.yml  release-agent.yml
.qwen/: settings.json  settings.json.orig
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_expand_tenant_add_settings_fields.py  002_add_documents_table.py  003_rename_tooth_number_to_lokacija.py  004_add_card_binding.py  005_add_cezih_visits_and_cases.py  006_permission_roles_remediation.py  019_add_cezih_signature_columns.py  021_add_predracun_tables.py  022_clear_stale_trial_expires.py  023_add_biljeske_table.py  25d5ef4e9bfd_add_patients_table.py  a8c3e2f1d5b7_expand_tenant_vrsta_for_all_specialties.py  ad76d96d3e35_phase1_initial_tables.py  b9d406b44dcc_add_cezih_euputnice_table.py  c1af963d4ec1_add_appointments_table.py  cb18236e67df_add_procedures_medical_records.py  (+1 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: agent_ws.py  (+15 more)
backend/tests/: conftest.py  test_appointments.py  test_auth.py  test_cezih_mock.py  test_cezih_tenant_isolation.py  test_medical_records.py  test_patients.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
local-agent/: app.js  config.example.json  index.html  package.json  pnpm-lock.yaml
local-agent/src-tauri/: Cargo.toml  tauri.conf.json
local-agent/src-tauri/src/: lib.rs  signing.rs  smartcard.rs  vpn.rs  websocket.rs
(+171 files in other folders)
